--- a/tugas-akhir.html
+++ b/tugas-akhir.html
@@ -10,14 +10,15 @@
         background-color: rgb(219, 218, 218);
       }
       .navbar {
-        display: flex;
         justify-content: center;
         height: 70px;
+        width: 100%;
         background-color: white;
       }
       .pembungkus-navbar {
         height: 70px;
         width: 80%;
+        margin: auto;
         justify-content: space-between;
         display: flex;
       }
@@ -42,7 +43,7 @@
         display: flex;
         width: 80%;
         justify-content: space-between;
-        margin: 20px;
+        margin: auto;
       }
       .teks-div-2 {
         font-size: 45px;
@@ -50,12 +51,12 @@
         font-weight: bold;
         text-align: center;
         height: 200px;
-        width: 600px;
+        width: 80%;
         color: white;
         justify-content: center;
       }
       .pembungkus-teks {
-        width: 650px;
+        width: 60%;
       }
       .b-dashed {
         display: flex;
@@ -69,7 +70,7 @@
         opacity: 0.5;
       }
       .kiri {
-        font-size: 20px;
+        font-size: 16px;
         text-align: center;
         width: 66%;
         color: gray;
@@ -79,10 +80,12 @@
         margin: -8px;
         border-radius: 0px 10px 10px 0px;
         background-color: gray;
-        width: 200px;
+        width: 34%;
         padding-left: 30px;
-        padding-top: 25px;
+        /* padding-top: 25px; */
         color: white;
+        display: flex;
+        align-items: center;
       }
       .div-bawah {
         background-color: white;
@@ -107,82 +110,109 @@
         cursor: pointer;
         /* display: none; */
       }
-      @media only screen and(max-width:600px) {
+
+      @media only screen and (max-width: 1000px) {
+        .pembungkus-div-2 {
+          display: block;
+          width: 95%;
+        }
+        .teks-div-2 {
+          width: 95%;
+          justify-content: center;
+        }
+        .b-dashed {
+          width: 95%;
+          justify-content: center;
+        }
+        .pembungkus-teks {
+          width: 80%;
+          margin: auto;
+        }
+        .img-tengah {
+          display: flex;
+          justify-content: center;
+        }
+        .div-bawah {
+          width: 80%;
+          justify-content: center;
+          margin: 100px auto;
+        }
+      }
+      @media only screen and (max-width: 750px) {
+        .teks-navbar {
+          display: none;
+        }
       }
     </style>
   </head>
-  <body style="margin: 0; font-family: Arial, Helvetica, sans-serif">
-    <div>
-      <div class="navbar">
-        <div class="pembungkus-navbar">
-          <div class="img-navbar">
-            <img style="width: 100%" src="base64-image.png" />
-          </div>
-          <div class="teks-navbar">
-            <p class="teks">HOME</p>
-            <p class="teks">TUTORIAL</p>
-            <p class="teks">FAQ</p>
-            <p class="teks" style="border-right: 1px solid grey">IMPRINT</p>
-          </div>
+  <body style="margin: 0px; font-family: Arial, Helvetica, sans-serif">
+    <nav class="navbar">
+      <div class="pembungkus-navbar">
+        <div class="img-navbar">
+          <img style="width: 100%" src="base64-image.png" />
+        </div>
+        <div class="teks-navbar">
+          <p class="teks">HOME</p>
+          <p class="teks">TUTORIAL</p>
+          <p class="teks">FAQ</p>
+          <p class="teks" style="border-right: 1px solid grey">IMPRINT</p>
         </div>
       </div>
-      <div style="display: flex; justify-content: center">
-        <div class="pembungkus-div-2">
-          <div>
-            <img src="mr-base.png" />
-          </div>
-          <div class="pembungkus-teks">
-            <div class="teks-div-2">
-              <p>CONVERT YOUR IMAGES TO BASE64</p>
-            </div>
-            <div
-              class="b-dashed"
-              onclick="uploadImage()"
-              ondragover="allowDrop(event)"
-              ondrop="drp(event)"
-            >
-              <input
-                type="file"
-                id="upload"
-                style="display: none"
-                onchange="klik(event)"
-              />
-              <p class="kiri">DRAG & DROPS IMAGES ANYWHERE</p>
-              <p class="kanan">OR CLICK HERE</p>
-            </div>
-          </div>
-        </div>
+    </nav>
+    <div class="pembungkus-div-2">
+      <div class="img-tengah">
+        <img src="mr-base.png" />
       </div>
-      <div class="div-bawah">
-        <img
-          id="canvas"
-          src=""
-          alt=""
-          style="width: 100%; height: 100%; display: none"
-        />
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="16"
-          height="16"
-          fill="currentColor"
-          class="bi bi-clipboard"
-          viewBox="0 0 16 16"
-          style="display: none"
-          onclick="copyToClipboard()"
+      <div class="pembungkus-teks">
+        <div class="teks-div-2">
+          <p>CONVERT YOUR IMAGES TO BASE64</p>
+        </div>
+        <div
+          class="b-dashed"
+          onclick="uploadImage()"
+          ondragover="allowDrop(event)"
+          ondrop="drp(event)"
         >
-          <path
-            d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"
+          <input
+            type="file"
+            id="upload"
+            style="display: none"
+            onchange="klik(event)"
           />
-          <path
-            d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"
-          />
-        </svg>
+          <p class="kiri">DRAG & DROPS IMAGES ANYWHERE</p>
+          <p class="kanan">OR CLICK HERE</p>
+        </div>
       </div>
-      <p class="text-botton">
-        &copy; 2022 Awesome Bonn UG - Privacy - Terms of Use
-      </p>
-      <p class="text-botton">By using this site you accept the terms of use.</p>
     </div>
+    <div class="div-bawah">
+      <img
+        id="canvas"
+        src=""
+        alt=""
+        style="width: 100%; height: 100%; display: none"
+      />
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="bi bi-clipboard"
+        viewBox="0 0 16 16"
+        style="display: none"
+        onclick="copyToClipboard()"
+      >
+        <path
+          d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"
+        />
+        <path
+          d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"
+        />
+      </svg>
+    </div>
+    <p class="text-botton">
+      &copy; 2022 Awesome Bonn UG - Privacy - Terms of Use
+    </p>
+    <p class="text-botton">By using this site you accept the terms of use.</p>
     <script>
       let res;
       function uploadImage() {
