--- a/tugas-akhir.html
+++ b/tugas-akhir.html
@@ -5,145 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      body {
-        background-color: rgb(219, 218, 218);
-      }
-      .navbar {
-        justify-content: center;
-        height: 70px;
-        width: 100%;
-        background-color: white;
-      }
-      .pembungkus-navbar {
-        height: 70px;
-        width: 80%;
-        margin: auto;
-        justify-content: space-between;
-        display: flex;
-      }
-      .teks-navbar {
-        display: flex;
-        height: 70px;
-      }
-      .teks {
-        font-size: 18px;
-        padding: 22px;
-        border-left: 1px solid rgb(161, 156, 156);
-        margin: auto;
-        height: 26px;
-        cursor: pointer;
-      }
-      .img-navbar {
-        padding: 20px 0px;
-        cursor: pointer;
-      }
-
-      .pembungkus-div-2 {
-        display: flex;
-        width: 80%;
-        justify-content: space-between;
-        margin: auto;
-      }
-      .teks-div-2 {
-        font-size: 45px;
-        font-family: Arial, Helvetica, sans-serif;
-        font-weight: bold;
-        text-align: center;
-        height: 200px;
-        width: 80%;
-        color: white;
-        justify-content: center;
-      }
-      .pembungkus-teks {
-        width: 60%;
-      }
-      .b-dashed {
-        display: flex;
-        padding: 10px;
-        border: 3px dashed gray;
-        border-radius: 10px;
-        cursor: pointer;
-        margin: 0;
-      }
-      .b-dashed:hover {
-        opacity: 0.5;
-      }
-      .kiri {
-        font-size: 16px;
-        text-align: center;
-        width: 66%;
-        color: gray;
-      }
-      .kanan {
-        font-size: 20px;
-        margin: -8px;
-        border-radius: 0px 10px 10px 0px;
-        background-color: gray;
-        width: 34%;
-        padding-left: 30px;
-        /* padding-top: 25px; */
-        color: white;
-        display: flex;
-        align-items: center;
-      }
-      .div-bawah {
-        background-color: white;
-        margin: 100px;
-        height: 500px;
-        border-radius: 7px;
-        position: relative;
-      }
-      .backg {
-        /* background-color: grey; */
-        width: 100%;
-      }
-      .text-botton {
-        text-align: center;
-        color: grey;
-        padding: 10px 0px;
-      }
-      svg {
-        position: absolute;
-        right: 10px;
-        top: 10px;
-        cursor: pointer;
-        /* display: none; */
-      }
-
-      @media only screen and (max-width: 1000px) {
-        .pembungkus-div-2 {
-          display: block;
-          width: 95%;
-        }
-        .teks-div-2 {
-          width: 95%;
-          justify-content: center;
-        }
-        .b-dashed {
-          width: 95%;
-          justify-content: center;
-        }
-        .pembungkus-teks {
-          width: 80%;
-          margin: auto;
-        }
-        .img-tengah {
-          display: flex;
-          justify-content: center;
-        }
-        .div-bawah {
-          width: 80%;
-          justify-content: center;
-          margin: 100px auto;
-        }
-      }
-      @media only screen and (max-width: 750px) {
-        .teks-navbar {
-          display: none;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="tugas-akhir.css" />
   </head>
   <body style="margin: 0px; font-family: Arial, Helvetica, sans-serif">
     <nav class="navbar">
@@ -213,46 +75,6 @@
       &copy; 2022 Awesome Bonn UG - Privacy - Terms of Use
     </p>
     <p class="text-botton">By using this site you accept the terms of use.</p>
-    <script>
-      let res;
-      function uploadImage() {
-        document.getElementById("upload").click();
-      }
-      async function klik(e) {
-        res = await convertBase64(e.target.files[0]);
-        const elemen = document.getElementById("canvas");
-        elemen.setAttribute("src", res);
-        elemen.style.display = "block ";
-        document.getElementsByClassName("bi")[0].style.display = "block";
-      }
-      const convertBase64 = (file) => {
-        return new Promise((resolve, reject) => {
-          const fileReader = new FileReader();
-          fileReader.readAsDataURL(file);
-          fileReader.onload = () => {
-            resolve(fileReader.result);
-          };
-          fileReader.onerror = (error) => {
-            reject(error);
-          };
-        });
-      };
-      function copyToClipboard() {
-        navigator.clipboard.writeText(res);
-        alert("sudah tersalin");
-      }
-      function allowDrop(e) {
-        e.preventDefault();
-      }
-      async function drp(e) {
-        e.preventDefault();
-        e.stopPropagation();
-        res = await convertBase64(e.dataTransfer.files[0]);
-        const elemen = document.getElementById("canvas");
-        elemen.setAttribute("src", res);
-        elemen.style.display = "block ";
-        document.getElementsByClassName("bi")[0].style.display = "block";
-      }
-    </script>
+    <script src="tugas-akhir.js"></script>
   </body>
 </html>
